# ChangeLog for app-misc/beep
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/beep/ChangeLog,v 1.26 2009/03/28 05:39:33 solar Exp $

  28 Mar 2009; <solar@gentoo.org> +files/beep-1.2.2-Makefile.patch,
  beep-1.2.2-r1.ebuild:
  - make beep respect LDFLAGS via basic Makefile cleanups

  10 May 2008; <solar@gentoo.org> beep-1.2.2-r1.ebuild:
  - cross compile fix and keyworded for ~arm

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> beep-1.2.2-r1.ebuild:
  Stable on ppc64

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> beep-1.2.2-r1.ebuild:
  x86 stable

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  beep-1.2.2-r1.ebuild:
  ppc stable

  07 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> beep-1.2.2-r1.ebuild:
  Stable on sparc

  19 Aug 2006; Bryan Østergaard <kloeri@gentoo.org> beep-1.2.2-r1.ebuild:
  Stable on alpha.

  01 Jul 2006; Tom Martin <slarti@gentoo.org> beep-1.2.2-r1.ebuild:
  Resolve bug #138632; some stylistic changes; stabilise on amd64.

*beep-1.2.2-r1 (04 Aug 2004)

  03 Aug 2005; Tom Martin <slarti@gentoo.org>
  +files/beep-1.2.2-nosuid.patch, +beep-1.2.2-r1.ebuild:
  New non-suid patch from Ned Ludd <solar@gentoo.org>.

  28 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> beep-1.2.2.ebuild:
  Stable on sparc

  02 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> beep-1.2.2.ebuild:
  To ~sparc

  02 Jun 2005; Yuta SATOH <nigoro@gentoo.org> beep-1.2.2.ebuild:
  Stable on ppc64

  26 Apr 2005; Yuta SATOH <nigoro@gentoo.org> beep-1.2.2.ebuild:
  added ~ppc64

  13 Oct 2004; Tom Martin <slarti@gentoo.org> :
  Adding shell-tools as herd, myself as maintainer. This package was
  previously unmaintained.

  13 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> beep-1.2.2.ebuild:
  use the portage functions; tidy

  03 Jul 2004; <solar@gentoo.org> beep-1.2.2.ebuild:
  allow user optimizations by passing CFLAGS

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,