@@ -1,0 +1,29 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/beep/beep-1.3.ebuild,v 1.1 2011/04/19 20:40:11 radhermit Exp $
+
+EAPI=4
+
+inherit eutils base toolchain-funcs
+
+DESCRIPTION="The advanced PC speaker beeper"
+HOMEPAGE="http://www.johnath.com/beep/"
+SRC_URI="http://www.johnath.com/beep/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+
+PATCHES=( ${FILESDIR}/${PN}-1.2.2-Makefile.patch )
+
+pkg_setup() {
+	tc-export CC
+}
+
+src_install() {
+	dobin beep
+	fperms 0711 /usr/bin/beep
+	doman beep.1.gz
+	dodoc CHANGELOG CREDITS README
+}
